--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                     <span class="text-gray-700">Quality inspection and certification services</span>
                                 </li>
                             </ul>
-                            <a href="#contact" class="inline-block bg-green+600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition-all">
+                            <a href="#contact" class="inline-block bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition-all">
                                 Request Export Quote
                             </a>
                         </div>
