--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 </svg>
                                 <div>
                                     <h4 class="font-medium mb-1">Address</h4>
-                                    <p class="text-green-100">Agricultural Trade Zone, Main Road,<br>Industrial Area, Your City 12345</p>
+                                    <p class="text-green-100">electronic city Phase1, Bengaluru , 560100</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -263,7 +263,7 @@
                                 </svg>
                                 <div>
                                     <h4 class="font-medium mb-1">Phone</h4>
-                                    <p class="text-green-100">+1 (555) 123-4567</p>
+                                    <p class="text-green-100">+91 7620878455</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
