--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     </style>
 </head>
 <body class="font-['Poppins'] bg-gray-50">
+    <!-- Floating Contact Button -->
+    <div class="fixed bottom-6 right-6 z-50">
+        <a href="#contact" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg transition-all flex items-center">
+            Request Export Quote
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+            </svg>
+        </a>
+    </div>
+
     <!-- Navigation -->
     <nav class="bg-white shadow-md">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -216,10 +227,11 @@
                 <div class="md:flex">
                     <div class="md:w-1/2 p-8">
                         <h3 class="text-2xl font-semibold text-gray-800 mb-6">Send Us a Message</h3>
-                        <form>
+                        <form method="POST" action="/submit-form">
+                            <input type="hidden" name="_token" value="{{ csrf_token() }}">
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
-                                <input type="text" id="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent">
+                                <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent" required>
                             </div>
                             <div class="mb-4">
                                 <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
@@ -227,7 +239,7 @@
                             </div>
                             <div class="mb-4">
                                 <label for="service" class="block text-gray-700 font-medium mb-2">Service Interested In</label>
-                                <select id="service" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent">
+                                <select id="service" name="service" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent" required>
                                     <option value="">Select a service</option>
                                     <option value="export">Export Services</option>
                                     <option value="import">Import Services</option>
@@ -237,7 +249,7 @@
                             </div>
                             <div class="mb-6">
                                 <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
-                                <textarea id="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"></textarea>
+                                <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent" required></textarea>
                             </div>
                             <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition-all">
                                 Send Message
@@ -254,7 +266,7 @@
                                 </svg>
                                 <div>
                                     <h4 class="font-medium mb-1">Address</h4>
-                                    <p class="text-green-100">electronic city Phase1, Bengaluru , 560100</p>
+                                    <p class="text-green-100">Agricultural Trade Zone, Main Road,<br>Industrial Area, Your City 12345</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -263,7 +275,7 @@
                                 </svg>
                                 <div>
                                     <h4 class="font-medium mb-1">Phone</h4>
-                                    <p class="text-green-100">+91 7620878455</p>
+                                    <p class="text-green-100">+1 (555) 123-4567</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -355,4 +367,3 @@
     </script>
 </body>
 </html>
-
